# cmtp-responder

./: 01_enum.bats  02_file_operations.bats  CMakeLists.txt  LICENSE.APLv2  README.rst  armhf-toolchain.txt  cmtp-responder.conf  config.bash  copy-from-store.ps1  copy-to-store.ps1  create-folder.ps1  empty-store.ps1  file-utilities.bash  find-files.ps1  find-folders.ps1  get-windows-tmp.ps1  mtp-device-id.bash  mtp-responder.service  mtp-responder.socket  mtp-utilities-bash-dummy.bash  mtp-utilities-linux-gvfs.bash  mtp-utilities-windows-power-shell.bash  mtp-utilities.bash  open-store-window.ps1  os-setup-linux-gvfs.bash  os-setup-windows-power-shell.bash  os-setup.bash  remove-folder.ps1  usb-utilities-linux.bash  usb-utilities-windows.bash  usb-utilities.bash
.github/workflows/: docker-image.yml  docker-publish.yml
Docker/: Dockerfile  aarch64-toolchain.txt  aarch64.sh  armhf-toolchain.txt  armhf.sh  build-cmtp-responder.sh  build-gt.sh  build-libusbgx.sh  x86_64.sh
debos/: README.rst  generate-img.sh  run-vm.sh  x86_64-uefi-disk.yaml
deploy/: README.rst  deploy-tar-gz-to-target.sh  make-dist.sh  remove-from-target.sh
include/: mtp_cmd_handler.h  mtp_cmd_handler_util.h  mtp_config.h  mtp_datatype.h  mtp_event_handler.h  mtp_init.h  mtp_inoti_handler.h  ptp_container.h  ptp_datacodes.h
include/entity/: mtp_device.h  mtp_object.h  mtp_property.h  mtp_store.h
include/transport/: mtp_descs_strings.h  mtp_transport.h  mtp_usb_driver.h
include/util/: mtp_fs.h  mtp_list.h  mtp_media_info.h  mtp_msgq.h  mtp_support.h  mtp_thread.h  mtp_util.h
packaging/: 99-mtp-responder.rules  mtp-responder.manifest  mtp-responder.spec
ps1/: close-windows.ps1  copy-from-store.ps1  copy-to-store.ps1  create-folder.ps1  empty-store.ps1  find-files.ps1  open-store-window.ps1  remove-folder.ps1  remove-from-store.ps1
scripts/: 500.mtp-responder-upgrade.sh  mtp-responder-upgrade.sh
src/: mtp_cmd_handler.c  mtp_cmd_handler_util.c  mtp_event_handler.c  mtp_init.c  mtp_inoti_handler.c  ptp_container.c
src/entity/: CMakeLists.txt  mtp_device.c  mtp_object.c  mtp_property.c  mtp_store.c
src/extract_descs/: mtp_extract_descs_strs.c
src/transport/: CMakeLists.txt  mtp_descs_strings.c  mtp_transport.c  mtp_usb_driver.c  mtp_usb_driver_ffs.c  mtp_usb_driver_slp.c
src/util/: CMakeLists.txt  mtp_fs.c  mtp_list.c  mtp_media_info.c  mtp_msgq.c  mtp_support.c  mtp_thread.c  mtp_util.c
systemd/: ffs.socket  functionfs-daemon.service  mtp-ffs.scheme  run-ffs_mtp.mount  usb-gadget.service
tests/: 01_enum.bats  02_file_operations.bats  README.rst  TODO.txt  config.bash  file-utilities.bash  mtp-device-id.bash  mtp-utilities-bash-dummy.bash  mtp-utilities-linux-gvfs.bash  os-setup-bash-dummy.bash  os-setup-linux-gvfs.bash  os-setup-windows-power-shell.bash  usb-utilities-windows.bash
tests/ps1/: close-windows.ps1  create-folder.ps1  device-connect.ps1  device-disconnect.ps1  device-is-mtp.ps1  device-present.ps1  empty-store.ps1  find-folders.ps1  mkdir.ps1  rmdir.ps1
unittest/: CMakeLists.txt  mtpResponder.cpp  mtpResponder.h  mtpconf.h  unittest.cpp
